# alacritty_chat

./: Cargo.toml  IMPLEMENTATION.md  NEXT_STEPS.md  README.md  run_in_wsl.sh
src/: app.rs  chat.rs  main.rs  terminal.rs
