[package]
name = "alacritty_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
alacritty_terminal = "0.25.0"
eframe = "0.31.1"
egui = "0.31.1"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }